# polyclinicWebSite

./: README.md  docker-compose.yaml  my.cnf
backend/: Dockerfile  pyproject.toml
backend/authentification/: urls.py  views.py
backend/backend/: settings.py  urls.py
backend/doctor/: admin.py  models.py  urls.py  views.py
backend/doctor/dbLayer/: dbRequests.py
backend/doctor/migrations/: 0001_initial.py
backend/doctor/serviceLayer/: doctorServices.py
backend/notes/: models.py  urls.py  views.py
backend/notes/dbLayer/: dbRequest.py
backend/notes/migrations/: 0001_initial.py  0002_note_patientcomment.py  0003_alter_note_patientcomment.py  0004_auto_20211129_1725.py
backend/notes/serviceLayer/: noteServices.py
backend/patient/: models.py  urls.py  views.py
backend/patient/dbLayer/: dbRequest.py
backend/patient/migrations/: 0001_initial.py  0002_patient_polis.py
backend/patient/serviceLayer/: patientServices.py
backend/polyclinic/: admin.py  models.py  urls.py  views.py
backend/polyclinic/dbLayer/: dbRequest.py
backend/polyclinic/migrations/: 0001_initial.py
backend/polyclinic/serviceLayer/: polyclinicServices.py
frontend/: package-lock.json  package.json
frontend/src/: AccountDoctor.js  AccountUser.js  Addresses.js  App.js  Login.js  MainPage.js  NotePage.js  SendFile.js  SingUp.js  index.js
nextjs-frontend/: package.json
nextjs-frontend/components/: Footer.js  Header.js  Modal.js  SingUp.js
nextjs-frontend/pages/: index.js
nextjs-frontend/styles/: addresses.module.css  doctor.module.css  global.css  login.module.css  (+3 more)
(+21 files in other folders)
